# Minimail

./: README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: main.yml
app/: main.py
